--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Christian Sandoval">Christian Sandoval</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Associate Technical Account Manager</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
