--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
           <p>
             A little about me that's not related to Cybersecurity:
 			<ol type="1">
-				<li>I'm a huge family person, I'm always trying to spend time with my whole family</li>
-				<li>I like outdoor activities like running, mountain biking, and anything else I get invited to</li>
-				<li>Gaming with friends, I'm a social gamer</li>
+				<li>1. I'm a huge family person, I'm always trying to spend time with my whole family</li>
+				<li>2. I like outdoor activities like running, mountain biking, and anything else I get invited to</li>
+				<li>3. Gaming with friends, I'm a social gamer</li>
 			</ol> 
           </p>
         </section>
