--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 
           </li>
 
+          <li class="contact-item">
+            <form method="get" action="./assets/pdf/Resume.pdf">
+              <button class="form-btn" type="submit">My Full Resume</button>
+            </form>
+          </li>
+		
         </ul>
 
         <div class="separator"></div>
