--- a/index.html
+++ b/index.html
@@ -429,12 +429,12 @@
 
 
         <!--
-          - clients
+          - clients to quick view skills
         -->
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Skills Quick View</h3>
 
           <ul class="clients-list has-scrollbar">
 
