--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
           - testimonials
         -->
 
+	<!--
+          - testimonials commented out
+
+
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -382,10 +386,12 @@
 
         </section>
 
-
+        -->
         <!--
           - testimonials modal
         -->
+        <!--
+          - testimonials modal comment out
 
         <div class="modal-container" data-modal-container>
 
@@ -426,7 +432,7 @@
           </section>
 
         </div>
-
+        -->
 
         <!--
           - clients to quick view skills
