--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         <section class="about-text">
           <p>
-			I'm a Cybersecurity professional from the Inland Empire in Southern California, I am currently working at Tanium as a Associate Technical Account Manager.
+			I'm a Cybersecurity professional from the Inland Empire in Southern California, I am currently working at Tanium as an Associate Technical Account Manager.
 			I am currently preparing for my OSCP and on my free time I'm trying to get enough information and education to be able to do bug bounties as a part time.
           </p>
 
