--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@
               <span>Aug. 2018 - Jun. 2020</span>
 
               <p class="timeline-text">
-		<li>▪ Member of the Cyber Intelligence and Security Organization and Student of Red Hat Academy (RH124/RH134)</li>
-		<li>▪ Involved in various projects that included: Containers/Docker, White Hat Hacking, Data Analytics, On-Site Implants / Drop Boxes, Forensics</li>
-		<li>▪ Participating in 28 outreach events to showcase projects to university and high school students. </li>
+		<p>▪ Member of the Cyber Intelligence and Security Organization and Student of Red Hat Academy (RH124/RH134)</p>
+		<p>▪ Involved in various projects that included: Containers/Docker, White Hat Hacking, Data Analytics, On-Site Implants / Drop Boxes, Forensics</p>
+		<p>▪ Participating in 28 outreach events to showcase projects to university and high school students. </p>
               </p>
 
             </li>
