--- a/index.html
+++ b/index.html
@@ -654,7 +654,12 @@
             </li>
 
           </ul>
-
+		
+          <li class="resume">
+            <form method="get" action="./assets/pdf/Resume.pdf">
+              <button class="form-btn" type="submit">My Full Resume</button>
+            </form>
+          </li>
         </section>
 
       </article>
