--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">California State University – San Bernardino</h4>
-
+	      <span style="color:DodgerBlue">B.S. Information Systems and Technology – Cyber Security Option </span>
               <span>Aug. 2018 - Jun. 2020</span>
 
               <p class="timeline-text">
@@ -529,6 +529,7 @@
 
               <h4 class="h4 timeline-item-title">Riverside City College</h4>
 
+	      <span style="color:DodgerBlue">A.A. | Administration & Information Systems</span>
               <span>Jun. 2015 - Jun. 2018</span>
 
             </li>
