--- a/index.html
+++ b/index.html
@@ -655,14 +655,25 @@
             </li>
 
           </ul>
-		
-        </section>
 
-	<li class="resume">
+
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+        <h3 class="h3">View Full Resume</h3>
+	<li class="timeline">
             <form method="get" action="./assets/pdf/Resume.pdf">
               <button class="form-btn" type="submit">My Full Resume</button>
             </form>
 	</li>
+
+
+        </section>
+
+
 	      
       </article>
 
