--- a/index.html
+++ b/index.html
@@ -663,12 +663,12 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-        <h3 class="h3">View Full Resume</h3>
-	<li class="timeline">
-            <form method="get" action="./assets/pdf/Resume.pdf">
-              <button class="form-btn" type="submit">My Full Resume</button>
-            </form>
-	</li>
+  <h3 class="h3">
+    View Full Resume
+    <form method="get" action="./assets/pdf/Resume.pdf">
+      <button class="form-btn" type="submit">My Full Resume</button>
+    </form>
+  </h3>
 
 
         </section>
