--- a/index.html
+++ b/index.html
@@ -664,9 +664,8 @@
             </div>
 
   <h3 class="h3">
-    View Full Resume
     <form method="get" action="./assets/pdf/Resume.pdf">
-      <button class="form-btn" type="submit">My Full Resume</button>
+      <button class="form-btn" type="submit">View My Full Resume</button>
     </form>
   </h3>
 
