--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/bug bounty.png
                 " alt="design icon" width="40">
               </div>
 
