--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Bug Bounty</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Currently educating myself on the OWASP Top 10 to commit to bug bounty hunting part time.
                 </p>
               </div>
 
