--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/cyber-security.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/hacker.gif" type="image/x-icon">
 
   <!--
     - custom css link
