--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                <img src="./assets/images/nmap.svg" alt="client logo">
               </a>
             </li>
 
