--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Skills Quick View</h3>
+          <h3 class="h3 clients-title">Certifications Quick View</h3>
 
           <ul class="clients-list has-scrollbar">
 
