--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
         <ul class="social-list">
 
           <li class="social-item">
+            <a href="https://www.linkedin.com/in/christian-sandoval-b2913617a/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://github.com/csandoval63" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+		
+          <li class="social-item">
             <a href="https://www.instagram.com/gigglez.dev/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
