--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/CompTIA_CNVP.png" alt="client logo">
+                <img src="./assets/images/cnvp.png" alt="client logo">
               </a>
             </li>
 
