--- a/index.html
+++ b/index.html
@@ -554,29 +554,30 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
-
-              <span>2013 — 2015</span>
+              <h4 class="h4 timeline-item-title">Technical Support Analyst</h4>
+	      <span style="color:DodgerBlue">Fortra</span>
+              <span>Oct. 2021 - Sep. 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+		<p class="timeline-text">▪ Assist customers mitigate and solve any security related issues found through their independent pen testing results they provide.</p>
+		<p class="timeline-text">▪ Provide solutions to clients' analytical & technical issues via the phone, email, live-chat, or screen-sharing.</p>
+		<p class="timeline-text">▪ Support large File Transfer Protocols (File Services), Managed File Transfer(MFT), Databases, Cloud, APIs & SaaS.</p>
+		<p class="timeline-text">▪ Analyze audit logs, network packets, review systems data, and look for rising issues & suspicious activities.</p>
+		<p class="timeline-text">▪ Troubleshoot a variety of operating systems, such as Windows, Mac, IBM i, Solaris, Linux, Unix & AIX.</p>
+		<p class="timeline-text">▪ Manage MFT using centralized enterprise-level Automation, Encryption, Security, Auditing & Compliance.</p>
+		<p class="timeline-text">▪ Assist in formulating solutions to existing or potential concerns with a robust team of professionals.</p>
+		<p class="timeline-text">▪ Participate in a continuous learning program to stay up to date with IT industry innovative practices</p>
+		<p class="timeline-text">▪ Serve as first level and second level of contact to respond to stakeholders' inquiries and provide products triage support.</p>
+		<p class="timeline-text">▪ Conduct product demonstrations with customers and assist in presenting in training sessions.</p>
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <h4 class="h4 timeline-item-title">Information Technology Specialist</h4>
+	      <span style="color:DodgerBlue">Naval Sea Systems Command (NAVSEA)</span>
+              <span>Jul. 2020 - Sep. 2021</span>
 
             </li>
 
