--- a/index.html
+++ b/index.html
@@ -581,6 +581,31 @@
 
             </li>
 
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Student Research Assistant</h4>
+	      <span style="color:DodgerBlue">CALIFORNIA STATE UNIVERSITY SAN BERNARDINO</span>
+              <span>Jun. 2019 – Jun. 2020</span>
+
+              <p class="timeline-text">
+		<p class="timeline-text">▪ Supported the Community College Cyber Pilot Program (C3P) by tracking scholar progress regarding trainings under the NICE Challenge Project.</p>
+		<p class="timeline-text">▪ Assisted C3P scholars with setting up their own unique Raspberry Pi projects and Pi network.</p>
+		<p class="timeline-text">▪  Involved in outreach hours going to the community to get middle school and high school kids educated in cybersecurity by participating in class visits and teaching them the importance of internet security by displaying interactive projects from CSU San Bernardino’s Cyber Intelligence and Security Organization.</p>
+              </p>
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Gencyber Girl Scout Camp Staff</h4>
+	      <span style="color:DodgerBlue">CALIFORNIA STATE UNIVERSITY SAN BERNARDINO</span>
+              <span>Jun. 2019 – Jun. 2019</span>
+
+              <p class="timeline-text">
+		<p class="timeline-text">▪ Collaborated with a team of 12 to teach 250 girl scouts the importance of online safety by demonstrating how open connections can lead to unsafe online practices.</p>
+		<p class="timeline-text">▪ Demonstrated how malicious users can connect to their drones and look through the live feed of their drone.</p>
+	      </p>
+            </li> 
+		  
           </ol>
 
         </section>
