--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/ace-1.webp" alt="client logo">
+                <img src="./assets/images/ace-1-removebg-preview.png" alt="client logo">
               </a>
             </li>
 
