--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title"Networking</h4>
+                <h4 class="h4 service-item-title">Networking</h4>
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
