--- a/index.html
+++ b/index.html
@@ -501,14 +501,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
-
-              <span>2015 — Present</span>
+              <h4 class="h4 timeline-item-title">Associate Technical Account Manager</h4>
+	      <span style="color:DodgerBlue">Tanium</span>
+              <span>Oct. 2023 - Current</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+		<p class="timeline-text">▪ Pending Website Update</p>
               </p>
 
             </li>
