--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
               <h4 class="h4 timeline-item-title">Associate Technical Account Manager</h4>
 	      <span style="color:DodgerBlue">Tanium</span>
-              <span>Oct. 2023 - Current</span>
+              <span>Oct. 2023 - Present</span>
 
               <p class="timeline-text">
 		<p class="timeline-text">▪ Pending Website Update</p>
