--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <section class="about-text">
           <p>
 			I'm a Cybersecurity professional from the Inland Empire in Southern California, I am currently working at Tanium as an Associate Technical Account Manager.
-			I am currently preparing for my OSCP and on my free time I'm trying to get enough information and education to be able to do bug bounties as a part time.
+			Currently educating myself to be able to do bug bounties as a part time.
           </p>
 
           <p>
