--- a/index.html
+++ b/index.html
@@ -463,6 +463,12 @@
 
             <li class="clients-item">
               <a href="#">
+                <img src="./assets/images/TCO.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
                 <img src="./assets/images/ace-1-removebg-preview.png" alt="client logo">
               </a>
             </li>
