--- a/index.html
+++ b/index.html
@@ -512,7 +512,9 @@
               <span>Oct. 2023 - Present</span>
 
               <p class="timeline-text">
-		<p class="timeline-text">▪ Pending Website Update</p>
+		<p class="timeline-text">▪ Resolved user queries and technical issues related to cybersecurity tools and protocols </p>
+		<p class="timeline-text">▪ Assisted clients to help optimize their performance with cybersecurity software by providing additional use-cases for modules including Patch, Deploy, Threat Response, and Comply</p>
+		<p class="timeline-text">▪ Maintained routine communication with clients to assess overall satisfaction and resolve complaints</p>
               </p>
 
             </li>
