--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
                 <p class="service-item-text">
                   Currently educating myself on the OWASP Top 10 to commit to bug bounty hunting part time.
+			<!-- Expert bug bounty hunter specializing in identifying and mitigating web vulnerabilities to enhance cybersecurity and protect digital assets. -->
                 </p>
               </div>
 
@@ -237,7 +238,7 @@
                 <h4 class="h4 service-item-title">Networking</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Experienced networking professional skilled in designing, implementing, and securing robust network infrastructures for optimal performance and reliability.
                 </p>
               </div>
 
@@ -253,7 +254,7 @@
                 <h4 class="h4 service-item-title">Forensics</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Skilled computer forensics expert specializing in the investigation, analysis, and recovery of digital evidence for cybersecurity
                 </p>
               </div>
 
@@ -269,7 +270,7 @@
                 <h4 class="h4 service-item-title">System Administration</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Experienced system administrator proficient in managing, maintaining, and securing enterprise IT infrastructures to ensure optimal performance and reliability.
                 </p>
               </div>
 
