--- a/index.html
+++ b/index.html
@@ -698,6 +698,9 @@
           <div class="title-wrapper">
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
+	    	<form method="get" action="./assets/pdf/Resume.pdf">
+      			<button class="form-btn" type="submit">View My Full Resume</button>
+   		</form>
             </div>
 
   <h3 class="h3">
