--- a/index.html
+++ b/index.html
@@ -698,17 +698,15 @@
           <div class="title-wrapper">
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
-	    	<form method="get" action="./assets/pdf/Resume.pdf">
-      			<button class="form-btn" type="submit">View My Full Resume</button>
-   		</form>
             </div>
-
+		  
+<div class="separator">
   <h3 class="h3">
     <form method="get" action="./assets/pdf/Resume.pdf">
       <button class="form-btn" type="submit">View My Full Resume</button>
     </form>
   </h3>
-
+</div>
 
         </section>
 
