--- a/index.html
+++ b/index.html
@@ -693,11 +693,11 @@
 
           </ul>
 		  
-  <h3 class="h3">
-    <form method="get" action="./assets/pdf/Resume.pdf">
-      <button class="form-btn" type="submit">View My Full Resume</button>
-    </form>
-  </h3>
+    <h3 class="h3" style="text-align: left;">
+        <form method="get" action="./assets/pdf/Resume.pdf">
+            <button class="form-btn" type="submit" style="margin-left: 0;">View My Full Resume</button>
+        </form>
+    </h3>
 
         </section>
 
