--- a/index.html
+++ b/index.html
@@ -156,10 +156,13 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-
-          <li class="navbar-item">
+      <!--
+        - #uncomment when portfolio done
+	<li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
+      -->
+
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
