--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
             
             <li class="timeline-item">
 
-              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Programming: </strong></font> <font color="#FFFFFF"> Python, Java, C, C#, SQL, Bash, git</font></p>
+              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Programming: </strong></font> <font color="#FFFFFF"> Python, C++, SQL, Bash, git</font></p>
    
             </li>
             <li class="timeline-item">
@@ -670,12 +670,12 @@
             </li>
              <li class="timeline-item">
 
-              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Digital Forensics: </strong></font> <font color="#FFFFFF">Autopsy, OSForensics, Magnet AXIOM</font></p>
+              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Digital Forensics: </strong></font> <font color="#FFFFFF">Autopsy, FTK, Magnet AXIOM</font></p>
    
             </li>
             <li class="timeline-item">
 
-              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Virtualization: </strong></font> <font color="#FFFFFF">VMware ESXI, VMware Workstation, Virtualbox, Parallels, UTM, Docker, TrueNAS</font></p>
+              <p class="h4 timeline-item-title"> <font color="DodgerBlue"><strong>Virtualization: </strong></font> <font color="#FFFFFF">VMware ESXI, VMware Workstation, Virtualbox, Parallels, Docker, TrueNAS</font></p>
    
             </li>
             <li class="timeline-item">
